2009-08-20
	* FE: Remove obsolete marker.
	* FE: Display only records from live workspace on live website.
	* FE: Display workspace records when front end preview is active.
	* BE: For sessions and speaker show only records of selected workspace.
	
2009-08-19
	* FE: The output of the speaker info text in speaker list view, 
	  now can be wrapped with standard TS stdWrap settings.

2009-08-14
	* Version 0.2.1
	* FE: The output of the session description text in session and speaker
	  list view, now can be wrapped with standard TS stdWrap settings.
	
2009-08-13
	* Version 0.2.0
	* FE: Make links to detail views simpler for RealURL usage.
	  The "Back" link now is only shown when going to detail view from list view.
	  There is no "Back" link when going from detail view to another detail view.
	* Cleanup code: Changed method for getting language overlay records.

2009-08-12
	* BE: Remember the selected function and sub module for each page seperate.
	  Now you don't have to select the function "Event data" or "Common data"
	  according to the content of the selected page when you switch between pages.
	  The last selection is restored when you select a page.
	* Caching is now on per default and can be disabled via TS setting.
	* Fixed SQL errors when showing plugin with detail view without an uid given
	  in the URL.

2009-08-11
	* Many changes to fit the TYPO3 coding guide lines.

2009-08-09
	* BE: Fixed missing field values when add new speaker restriction after saving
	  a speaker restriction using the saveDocNew button.

2009-08-08
	* Update documentation with new layout template.

2008-11-23
	* Version 0.1.17
	* FE: When the event is in the past and no presentation handouts are available
	  then show a message about missing handouts.
	* Raise the maximum document size for presentations from 5000kB to 10000kB.

2008-10-14
	* Version 0.1.16
	* BE: New function to update the names of timeslots.
	* BE: New format of time slot names when editing time slots.