@@ -129,6 +129,7 @@ class tx_wseevents_locations extends tx_wseevents_dbplugin {
 			$entry[2] = '';
 			$PA['items'][] = $entry;
 		}
+		$GLOBALS['TYPO3_DB']->sql_free_result($res);
 
 #		debug ($PA);
 
