@@ -136,6 +136,7 @@ class tx_wseevents_speakers extends tx_wseevents_dbplugin {
 				$entry[2] = '';
 				$PA['items'][] = $entry;
 			}
+			$GLOBALS['TYPO3_DB']->sql_free_result($res);
 		}
 
 #		debug ($PA);
