@@ -258,8 +258,10 @@ class tx_wseevents_locationslist extends tx_wseevents_backendlist{
 					while ($row = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($reslang)) {
 						$this->addRowToTable($table, $row);
 					}
+					$GLOBALS['TYPO3_DB']->sql_free_result($reslang);
 				}
 			}
+			$GLOBALS['TYPO3_DB']->sql_free_result($res);
 			if ($found) {
 				// Output the table array using the tableLayout array with the template
 				// class.
