@@ -214,6 +214,7 @@ class tx_wseevents_speakerrestrictionslist extends tx_wseevents_backendlist{
 			while ($row = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res)) {
 				$speakers[$row['uid']] = $row['name'] . ', ' . $row['firstname'];
 			}
+			$GLOBALS['TYPO3_DB']->sql_free_result($res);
 		}
 
 		// -------------------- Get list of events --------------------
@@ -244,6 +245,7 @@ class tx_wseevents_speakerrestrictionslist extends tx_wseevents_backendlist{
 				$event['begin'] = $row['begin'];
 				$events[] = $event;
 			}
+			$GLOBALS['TYPO3_DB']->sql_free_result($res);
 		}
 
 		// Add box for event selection
@@ -306,6 +308,7 @@ class tx_wseevents_speakerrestrictionslist extends tx_wseevents_backendlist{
 							) . LF,
 					);
 				}
+				$GLOBALS['TYPO3_DB']->sql_free_result($res);
 				if ($found) {
 					// Output the table array using the tableLayout array with the template
 					// class.
